tests/snapshots/tmux_e2e__retry_all_fail_shows_warnings_in_tui.snap
---
source: tests/tmux_e2e.rs
assertion_line: 1427
expression: normalized
---
Welcome to harnx 0.30.0  *  Type .help for commands, Tab to complete.
# retry-agent v
🤖 retry-agent
> hello

⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 1/3. Retrying in 10ms...
⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 2/3. Retrying in 20ms...
⚠ Model 'mock-llm:primary' exhausted retries (error: Failed to call chat-completions api (client: mock-llm, model:
mock-llm:primary)), cooldown 60s. Trying next fallback.
⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 1/3. Retrying in 10ms...
⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 2/3. Retrying in 20ms...
⚠ Model 'mock-llm:fallback' exhausted retries (error: Failed to call chat-completions api (client: mock-llm, model:
mock-llm:fallback)), cooldown 60s. Trying next fallback.
error: Failed to call chat-completions api (client: mock-llm, model: mock-llm:fallback)

































* 🤖 retry-agent
